--- a/bake.html
+++ b/bake.html
@@ -333,35 +333,350 @@
         `
       },
 
-      /* ==== New photo-only widgets (placeholders for now) ==== */
-      { id:"blackberry", title:"Blackberry Cake", img1:p("Blackberry_cake.JPG"),
-        ingredientsHTML:`<li>Recipe coming soon 🫐</li>`,
-        stepsHTML:`<li>More details coming soon.</li>` },
+      /* ====== NEW: full recipes you provided ====== */
 
-      { id:"carrot", title:"Carrot Cake", img1:p("Carrot_Cake.JPG"),
-        ingredientsHTML:`<li>Recipe coming soon 🥕</li>`,
-        stepsHTML:`<li>More details coming soon.</li>` },
+      {
+        id:"blackberrylavender",
+        title:"Blackberry Lavender Cake",
+        meta:"Lavender milk + syrup • Cream cheese buttercream",
+        img1:p("Blackberry_cake.JPG"),
+        ingredientsHTML: `
+          <li><strong>Lavender Milk</strong>
+            <ul>
+              <li>1 cup (240ml) whole milk</li>
+              <li>2 tsp dried culinary lavender</li>
+            </ul>
+          </li>
+          <li><strong>Lavender Syrup</strong>
+            <ul>
+              <li>1/2 cup (120ml) water</li>
+              <li>1/2 cup (100g) granulated sugar</li>
+              <li>2 tsp dried culinary lavender</li>
+            </ul>
+          </li>
+          <li><strong>Cake</strong>
+            <ul>
+              <li>1/4 cup (60g) sour cream, room temp</li>
+              <li>2 1/2 cups (295g) cake flour</li>
+              <li>1 1/2 cups (300g) granulated sugar</li>
+              <li>1 Tbsp baking powder • 1/2 tsp salt</li>
+              <li>1 cup (226g) unsalted butter, diced &amp; softened</li>
+              <li>1 1/2 tsp vanilla extract</li>
+              <li>4 large eggs, room temp</li>
+            </ul>
+          </li>
+          <li><strong>Cream Cheese Buttercream &amp; Filling</strong>
+            <ul>
+              <li>1 cup (226g) unsalted butter, room temp</li>
+              <li>8 oz (226g) cream cheese, room temp</li>
+              <li>5 1/2 cups (660g) confectioners’ sugar</li>
+              <li>2 Tbsp (30ml) whole milk</li>
+              <li>2 tsp vanilla • 1/8 tsp salt</li>
+              <li>1/2–1 cup blackberry jam</li>
+              <li>Optional: mauve/purple food color, fresh blackberries</li>
+            </ul>
+          </li>
+        `,
+        stepsHTML: `
+          <li><strong>Lavender Milk</strong>
+            <ol>
+              <li>Simmer milk; remove from heat; add lavender. Steep 20 min.</li>
+              <li>Strain; cool completely (make 1–2 days ahead if desired).</li>
+            </ol>
+          </li>
+          <li><strong>Lavender Syrup</strong>
+            <ol>
+              <li>Boil sugar + water; reduce heat; add lavender; simmer 10 min.</li>
+              <li>Remove from heat; steep to cool. Strain. Reserve for soaking layers.</li>
+            </ol>
+          </li>
+          <li><strong>Bake the Cake</strong>
+            <ol>
+              <li>Preheat 350°F. Grease/line three 8&quot; pans.</li>
+              <li>Stir sour cream with cooled lavender milk; set aside.</li>
+              <li>In mixer bowl: sift cake flour, sugar, baking powder, salt. Mix low to combine; add butter, vanilla, and half the milk/sour cream. Mix ~1 min.</li>
+              <li>Whisk eggs into remaining milk/sour cream. Add in 3 additions, mixing ~15 sec after each; scrape bowl; mix 15 sec more. Batter will be smooth with small lumps.</li>
+              <li>Divide into pans; bake 20–22 min (toothpick clean). Cool completely in pans on racks.</li>
+              <li>Level layers; generously brush tops with lavender syrup.</li>
+            </ol>
+          </li>
+          <li><strong>Buttercream</strong>
+            <ol>
+              <li>Beat butter + cream cheese 2 min until smooth.</li>
+              <li>Add sugar, milk, vanilla, salt; beat low 30 sec then high 3 min. Tint half purple if desired.</li>
+            </ol>
+          </li>
+          <li><strong>Assemble</strong>
+            <ol>
+              <li>Layer 1: thin white frosting, pipe two rings (outer &amp; inner) as a dam; fill gaps with blackberry jam.</li>
+              <li>Repeat with layer 2; top with layer 3. Crumb coat thinly; chill 15 min.</li>
+              <li>Frost exterior with purple buttercream; decorate; garnish with blackberries. Chill 20 min before slicing.</li>
+            </ol>
+          </li>
+        `
+      },
 
-      { id:"focaccia", title:"Focaccia Bread", img1:p("Foccacia.JPG"),
-        ingredientsHTML:`<li>Recipe coming soon 🫒</li>`,
-        stepsHTML:`<li>More details coming soon.</li>` },
+      {
+        id:"carrot",
+        title:"Carrot Cake",
+        meta:"Toasted pecans • Cream cheese frosting",
+        img1:p("Carrot_Cake.JPG"),
+        ingredientsHTML: `
+          <li><strong>Cake</strong>
+            <ul>
+              <li>2 cups (260g) chopped pecans (1 cup in batter, 1 cup garnish) — optional</li>
+              <li>1 1/2 cups (300g) brown sugar</li>
+              <li>1/2 cup (100g) granulated sugar</li>
+              <li>1 cup (240ml) vegetable/canola oil (or melted coconut oil)</li>
+              <li>4 large eggs</li>
+              <li>3/4 cup (180g) unsweetened applesauce</li>
+              <li>1 tsp vanilla</li>
+              <li>2 1/2 cups (312g) all-purpose flour</li>
+              <li>2 tsp baking powder • 1 tsp baking soda • 1/2 tsp salt</li>
+              <li>1 1/2 tsp cinnamon • 1 tsp ginger • 1/4 tsp nutmeg • 1/4 tsp cloves</li>
+              <li>2 cups (260g) grated carrots</li>
+            </ul>
+          </li>
+          <li><strong>Cream Cheese Frosting</strong>
+            <ul>
+              <li>16 oz (452g) cream cheese, room temp</li>
+              <li>1/2 cup (113g) unsalted butter, room temp</li>
+              <li>4 cups (480g) confectioners’ sugar</li>
+              <li>1 1/2 tsp vanilla • pinch salt</li>
+            </ul>
+          </li>
+        `,
+        stepsHTML: `
+          <li><strong>Toast Nuts</strong>
+            <ol>
+              <li>Preheat 300°F. Toast pecans 7–8 min; cool.</li>
+              <li>Raise oven to 350°F. Grease/line two or three 9&quot; pans.</li>
+            </ol>
+          </li>
+          <li><strong>Make Batter</strong>
+            <ol>
+              <li>Whisk brown sugar, granulated sugar, oil, eggs, applesauce, vanilla.</li>
+              <li>In another bowl, whisk flour, leaveners, salt, spices.</li>
+              <li>Fold wet into dry just to combine; fold in carrots and 1 cup toasted pecans.</li>
+            </ol>
+          </li>
+          <li><strong>Bake</strong>
+            <ol>
+              <li>Divide into pans. Three pans: 20–24 min. Two pans: 30–35 min. Toothpick should come out clean.</li>
+              <li>Cool completely in pans on racks.</li>
+            </ol>
+          </li>
+          <li><strong>Frost</strong>
+            <ol>
+              <li>Beat cream cheese + butter 2 min; add sugar, vanilla, salt; beat low then high 3 min.</li>
+            </ol>
+          </li>
+          <li><strong>Assemble</strong>
+            <ol>
+              <li>Level layers; frost between, top, and sides. Press remaining toasted pecans on exterior.</li>
+              <li>Chill 15–20 min before slicing. Store covered up to 5 days in fridge.</li>
+            </ol>
+          </li>
+        `
+      },
 
-      { id:"matcha", title:"Matcha Cookies", img1:p("Matcha_Cookie.JPG"),
-        ingredientsHTML:`<li>Recipe coming soon 🍵</li>`,
-        stepsHTML:`<li>More details coming soon.</li>` },
+      {
+        id:"redvelvet",
+        title:"Red Velvet Bundt Cake",
+        meta:"Cream cheese glaze",
+        img1:p("RedVelvet_Bundt.JPG"),
+        ingredientsHTML: `
+          <li><strong>Red Velvet Cake</strong>
+            <ul>
+              <li>3/4 cup (160g) oil</li>
+              <li>1/2 cup (110g) unsalted butter, melted</li>
+              <li>2 cups (400g) granulated sugar</li>
+              <li>2 large eggs</li>
+              <li>1 cup (240ml) buttermilk</li>
+              <li>2 tsp vanilla • 1 tsp white vinegar</li>
+              <li>2 Tbsp red food coloring</li>
+              <li>2 1/2 cups (300g) all-purpose flour</li>
+              <li>3 Tbsp cocoa powder</li>
+              <li>1 tsp baking soda • 1 tsp salt</li>
+            </ul>
+          </li>
+          <li><strong>Cream Cheese Glaze</strong>
+            <ul>
+              <li>4 oz cream cheese, room temp</li>
+              <li>2 cups (240g) powdered sugar</li>
+              <li>3 Tbsp milk</li>
+              <li>1/2 tsp vanilla</li>
+            </ul>
+          </li>
+        `,
+        stepsHTML: `
+          <li><strong>Bundt</strong>
+            <ol>
+              <li>Preheat 350°F. Whisk dry (flour, cocoa, baking soda, salt); set aside.</li>
+              <li>Whisk oil, butter, sugar 1–2 min. Whisk in eggs, then buttermilk, vanilla, vinegar, food color.</li>
+              <li>Mix in half dry, then the rest until smooth.</li>
+              <li>Prep 10–12 cup bundt pan (oil+flour spray). Pour batter (leave ~1 cup out if using 10-cup).</li>
+              <li>Bake 45 min (10-cup) or 50–60 min (12-cup). Cool 10 min; turn out; cool 30 min more.</li>
+            </ol>
+          </li>
+          <li><strong>Glaze</strong>
+            <ol>
+              <li>Mix cream cheese + powdered sugar, adding milk as needed; stir in vanilla. Should be pourable.</li>
+              <li>Pour over cooled cake. Store refrigerated up to 5 days.</li>
+            </ol>
+          </li>
+        `
+      },
 
-      { id:"raspberrybrownie", title:"Raspberry Brownie", img1:p("RaspberryBrownie.JPG"),
-        ingredientsHTML:`<li>Recipe coming soon 🍫</li>`,
-        stepsHTML:`<li>More details coming soon.</li>` },
+      {
+        id:"whitechoclemon",
+        title:"Lemon White Chocolate Cookies",
+        meta:"Bakery style • 400°F",
+        img1:p("WhiteChocolateLemon.JPG"),
+        img2:p("WhiteChocolateLemon2.JPG"),
+        ingredientsHTML: `
+          <li><strong>Cookie Dough</strong>
+            <ul>
+              <li>1 cup (226g) unsalted butter, slightly cold, cubed</li>
+              <li>3/4 cup (150g) granulated sugar</li>
+              <li>1/2 cup (110g) brown sugar, packed</li>
+              <li>2 Tbsp lemon zest</li>
+              <li>1 egg + 1 egg yolk</li>
+              <li>2 tsp lemon extract or emulsion</li>
+              <li>2 cups (240g) all-purpose flour</li>
+              <li>1 1/4 cups (144g) cake flour</li>
+              <li>1 tsp baking powder • 1/2 tsp baking soda • 1/2 tsp (3g) salt</li>
+              <li>16 oz white chocolate chips</li>
+            </ul>
+          </li>
+        `,
+        stepsHTML: `
+          <li>
+            <ol>
+              <li>Preheat oven to 400°F. Line baking sheet with parchment.</li>
+              <li>Whisk AP flour, cake flour, baking powder, baking soda, salt.</li>
+              <li>Cream butter, sugars, and zest ~2 min.</li>
+              <li>Beat in egg, yolk, and lemon extract.</li>
+              <li>Mix in dry on low just until incorporated; fold in white chocolate.</li>
+              <li>Portion 6 oz balls (4 per tray). Bake ~12 min until golden at edges.</li>
+              <li>Cool to room temp so centers set.</li>
+            </ol>
+          </li>
+        `
+      },
 
-      { id:"redvelvet", title:"Red Velvet Bundt", img1:p("RedVelvet_Bundt.JPG"),
-        ingredientsHTML:`<li>Recipe coming soon ❤️</li>`,
-        stepsHTML:`<li>More details coming soon.</li>` },
+      {
+        id:"raspberrybrownie",
+        title:"Fudge Raspberry Brownie Cookies",
+        meta:"8×8 pan • extra fudgy",
+        img1:p("RaspberryBrownie.JPG"),
+        ingredientsHTML: `
+          <li><strong>Batter</strong>
+            <ul>
+              <li>3/4 cup unsalted butter, melted</li>
+              <li>3/4 cup Dutch-process cocoa powder</li>
+              <li>1 tsp vanilla extract</li>
+              <li>1 3/4 cup packed light brown sugar</li>
+              <li>3 large eggs</li>
+              <li>3/4 cup all-purpose flour • 1/2 tsp salt</li>
+              <li>1/2 cup fresh raspberries, frozen</li>
+              <li>1/2 cup chocolate chips (optional)</li>
+            </ul>
+          </li>
+        `,
+        stepsHTML: `
+          <li>
+            <ol>
+              <li>Preheat 350°F. Line an 8×8&quot; pan with parchment.</li>
+              <li>Whisk butter, cocoa, vanilla until smooth.</li>
+              <li>In mixer, whip eggs + brown sugar until light and pale.</li>
+              <li>Fold butter mixture into eggs; then flour + salt.</li>
+              <li>Gently fold in raspberries and chips.</li>
+              <li>Bake ~25 min (up to 35). Edges set, center still smudgy on a knife.</li>
+            </ol>
+          </li>
+        `
+      },
 
-      { id:"whitechoclemon", title:"White Chocolate Lemon Cake",
-        img1:p("WhiteChocolateLemon.JPG"), img2:p("WhiteChocolateLemon2.JPG"),
-        ingredientsHTML:`<li>Recipe coming soon 🍋🍫</li>`,
-        stepsHTML:`<li>More details coming soon.</li>` },
+      {
+        id:"focaccia",
+        title:"Focaccia Bread",
+        meta:"Olive oil rich • Dimpled top",
+        img1:p("Foccacia.JPG"),
+        ingredientsHTML: `
+          <li><strong>Dough</strong>
+            <ul>
+              <li>1 3/4 cups warm water (105–115°F)</li>
+              <li>2 tsp cane sugar</li>
+              <li>2 1/4 tsp active dry yeast (1 packet)</li>
+              <li>500 g all-purpose flour (≈4 cups)</li>
+              <li>2 tsp sea salt</li>
+              <li>6 Tbsp extra-virgin olive oil, plus more for hands</li>
+              <li>Flaky salt + chopped rosemary (optional)</li>
+            </ul>
+          </li>
+        `,
+        stepsHTML: `
+          <li>
+            <ol>
+              <li>In mixer bowl: water + sugar; sprinkle yeast; rest 5 min until foamy.</li>
+              <li>Add flour + salt; mix low to shaggy; medium 5 min to very elastic, sticky dough.</li>
+              <li>Oil a large bowl with 2 Tbsp oil; transfer dough; brush top with pooling oil. Cover; rise 1–1½ hrs to double.</li>
+              <li>Oil a 9×13&quot; pan with 2 Tbsp oil. With oiled hands, fold dough into itself to form a rough ball. Transfer to pan; coat in oil; press to edges. Rest; press again. Cover; rise ~45 min. Preheat oven to 425°F during this rise.</li>
+              <li>Drizzle remaining 2 Tbsp oil; dimple all over with fingers. Sprinkle flaky salt/rosemary. Bake 20–30 min until golden.</li>
+            </ol>
+          </li>
+        `
+      },
+
+      {
+        id:"matcha",
+        title:"Matcha Cookies",
+        meta:"Crinkle coated • 350°F",
+        img1:p("Matcha_Cookie.JPG"),
+        ingredientsHTML: `
+          <li><strong>Dough</strong>
+            <ul>
+              <li>1/2 cup unsalted butter (1 stick)</li>
+              <li>1 cup sugar</li>
+              <li>1 tsp baking powder • 1/8 tsp baking soda • 1/2 tsp salt</li>
+              <li>2 eggs</li>
+              <li>2 cups flour</li>
+              <li>3 Tbsp matcha</li>
+            </ul>
+          </li>
+          <li><strong>For Rolling</strong>
+            <ul>
+              <li>1/4 cup granulated sugar</li>
+              <li>1/2 cup powdered sugar</li>
+              <li>1 tsp matcha (optional)</li>
+            </ul>
+          </li>
+        `,
+        stepsHTML: `
+          <li>
+            <ol>
+              <li>Preheat 350°F. Line a tray with parchment.</li>
+              <li>Cream butter with sugar, baking powder/soda, salt.</li>
+              <li>Beat in eggs until smooth.</li>
+              <li>Sift matcha into flour; mix in until combined.</li>
+              <li>Sift matcha with powdered sugar for coating.</li>
+              <li>Scoop 1.5 Tbsp balls; roll in granulated sugar, then matcha powdered sugar.</li>
+              <li>Bake ~11 min. Cool.</li>
+            </ol>
+          </li>
+        `
+      },
+
+      /* We keep this last to show both images */
+      {
+        id:"blackberry",
+        title:"Blackberry Cake (photo set)",
+        img1:p("Blackberry_cake.JPG"),
+        ingredientsHTML:`<li>See Blackberry Lavender Cake for full recipe 🫐🌿</li>`,
+        stepsHTML:`<li>—</li>`
+      },
+
     ];
 
     // ===== Render cards =====
