--- a/bake.html
+++ b/bake.html
@@ -71,6 +71,33 @@
     .modal-recipe h4{ margin:0 0 6px; }
     .modal-recipe ul,.modal-recipe ol{ margin:0 0 0 18px; }
     .muted{color:#6b7280;font-size:14px;}
+
+    /* === Top-3 badges === */
+.rcp-badge{
+  position:absolute; top:10px; left:10px;
+  width:34px; height:34px; border-radius:50%;
+  display:flex; align-items:center; justify-content:center;
+  font:800 16px/1 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+  color:#fff; border:2px solid rgba(255,255,255,.9);
+  box-shadow:0 6px 16px rgba(0,0,0,.25), inset 0 1px 0 rgba(255,255,255,.35);
+  text-shadow:0 1px 2px rgba(0,0,0,.35);
+}
+.rcp-badge.rank-1{ /* gold */
+  background:conic-gradient(#caa20a, #ffde68, #b8860b, #caa20a);
+}
+.rcp-badge.rank-2{ /* silver */
+  background:conic-gradient(#9fa9b4, #e9edf2, #8c99a8, #9fa9b4);
+}
+.rcp-badge.rank-3{ /* bronze */
+  background:conic-gradient(#a86b2f, #e5b086, #7b4b22, #a86b2f);
+}
+/* little ribbon tail for fun */
+.rcp-badge::after{
+  content:""; position:absolute; bottom:-7px; left:8px;
+  width:0; height:0; border-left:6px solid transparent; border-right:6px solid transparent;
+  border-top:8px solid rgba(0,0,0,.15); filter:blur(.2px);
+}
+
   </style>
 </head>
 <body>
@@ -213,6 +240,7 @@
       },
       {
         id:"thumbprint",
+        rank: 2,
         title:"Thumbprint Cookies",
         img1:p("ThumbPrint_1.jpg"),
         img2:p("ThumbPrint_2.jpg"),
@@ -294,6 +322,7 @@
       },
       {
         id:"lemon",
+        rank: 1,
         title:"Lemon Cake",
         meta:"Three 8&quot; layers • Cream cheese buttercream",
         img1:p("LemonCake.JPG"),
@@ -600,6 +629,7 @@
 
       {
         id:"focaccia",
+        rank: 3,
         title:"Focaccia Bread",
         meta:"Olive oil rich • Dimpled top",
         img1:p("Foccacia.JPG"),
@@ -668,15 +698,6 @@
         `
       },
 
-      /* We keep this last to show both images */
-      {
-        id:"blackberry",
-        title:"Blackberry Cake (photo set)",
-        img1:p("Blackberry_cake.JPG"),
-        ingredientsHTML:`<li>See Blackberry Lavender Cake for full recipe 🫐🌿</li>`,
-        stepsHTML:`<li>—</li>`
-      },
-
     ];
 
     // ===== Render cards =====
@@ -685,12 +706,13 @@
       const el=document.createElement('article');
       el.className='rcp-card';
       el.innerHTML = `
-        <button class="rcp-toggle" data-id="${r.id}" aria-label="Open ${r.title}">
-          <div class="rcp-photo">
-            <img src="${r.img1}" alt="${r.title} cover" loading="lazy">
-            <div class="rcp-caption">${r.title}</div>
-          </div>
-        </button>`;
+  <button class="rcp-toggle" data-id="${r.id}" aria-label="Open ${r.title}">
+    <div class="rcp-photo">
+      ${r.rank ? `<span class="rcp-badge rank-${r.rank}" aria-label="Top ${r.rank}">${r.rank}</span>` : ""}
+      <img src="${r.img1}" alt="${r.title} cover" loading="lazy">
+      <div class="rcp-caption">${r.title}</div>
+    </div>
+  </button>`;
       grid.appendChild(el);
     });
 
